fix page break on create/save query

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -2021,6 +2021,7 @@ input:focus-visible {
   border: 0;
   border-bottom: 1px solid #206bc4;
   font-weight: 400;
+  // color: #fff;
 }
 
 .nav-tabs .nav-link.active:hover {
@@ -2030,4 +2031,10 @@ input:focus-visible {
 .nav-tabs .nav-link:hover {
   border: 0;
   font-weight: 400;
+}
+
+.table-no-divider {
+  td {
+    border-bottom-width: 0px;
+  }
 }
